# tetration

./: .gitignore  .mise.toml  .ublx.toml  AGENTS.md  Cargo.toml  GETTING_STARTED.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  cspell.config.yaml
.github/scripts/: build-ffi-example.sh  bump-homebrew-formula.py  check-ffi-header.sh  commit-and-push-formula.sh  configure-netcdf-env.sh  package-ffi-release.sh  windows-openssl.ps1
.github/workflows/: ci.yml  release.yml
Formula/: tetration.rb
docs/: cli.md  ffi.md  layout_v1.md  phase9_tasklist.md  query_engine.md
examples/: create_and_query.rs  ffi_query.c  gen_small_tet_fixtures.rs  inspect_catalog.rs  session_write.rs  streaming_write.rs
fixtures/: .gitignore  README.md  benchmark.py  cli.py  generate.py  pyproject.toml
fixtures/benchmark/: __init__.py  case.py  constants.py  dispatch.py  log.py  report.py  runner.py  source.py  spec.json  spec.py  system.py  tet.py
fixtures/generate/: __init__.py  constants.py  dispatch.py  large.py  small.py  util.py
fixtures/queries/: README.md  mean_a.json  mean_a.toml  mean_strided_temperature.json  mean_strided_temperature.toml  mean_temperature.json  mean_temperature.toml  quantile_axis0_a.json  quantile_axis0_a.toml  slice_2x2_temperature.json  slice_2x2_temperature.toml  slice_full_temperature.json  slice_full_temperature.toml  sum_a.json  sum_a.toml  sum_axis0_a.json  sum_axis0_a.toml  var_a.json  var_a.toml
fixtures/small/h5/: cf_3d.h5  groups_3d.h5  tensor_3d.h5  tensor_4d.h5  tensor_5d.h5
fixtures/small/netcdf/: cf_3d.nc  groups_3d.nc  tensor_3d.nc  tensor_4d.nc  tensor_5d.nc
fixtures/small/tet/: README.md  large.tet  multichunk_f16.tet  multichunk_u32.tet  multichunk_u8.tet  plan.tet  sample.tet
fixtures/small/zarr/groups_3d/: zarr.json
fixtures/small/zarr/groups_3d/primary/i32/c/0/0/: 0
fixtures/small/zarr/groups_3d/primary/i64/c/0/0/: 0
fixtures/small/zarr/tensor_3d/: zarr.json
fixtures/small/zarr/tensor_3d/f32/: zarr.json
fixtures/small/zarr/tensor_3d/f32/c/0/0/: 0
fixtures/small/zarr/tensor_3d/f64/: zarr.json
fixtures/small/zarr/tensor_3d/f64/c/0/0/: 0
fixtures/small/zarr/tensor_3d/i32/: zarr.json
fixtures/small/zarr/tensor_3d/i64/: zarr.json
fixtures/small/zarr/tensor_4d/: zarr.json
fixtures/small/zarr/tensor_4d/f32/: zarr.json
fixtures/small/zarr/tensor_4d/f32/c/0/0/0/: 0
fixtures/small/zarr/tensor_4d/f64/: zarr.json
fixtures/small/zarr/tensor_4d/f64/c/0/0/0/: 0
fixtures/small/zarr/tensor_4d/i32/: zarr.json
fixtures/small/zarr/tensor_4d/i32/c/0/0/0/: 0
fixtures/small/zarr/tensor_4d/i64/: zarr.json
fixtures/small/zarr/tensor_4d/i64/c/0/0/0/: 0
fixtures/small/zarr/tensor_5d/: zarr.json
fixtures/small/zarr/tensor_5d/f32/: zarr.json
fixtures/small/zarr/tensor_5d/f32/c/0/0/0/0/: 0
fixtures/small/zarr/tensor_5d/f64/: zarr.json
fixtures/small/zarr/tensor_5d/f64/c/0/0/0/0/: 0
fixtures/small/zarr/tensor_5d/i32/: zarr.json
fixtures/small/zarr/tensor_5d/i32/c/0/0/0/0/: 0
fixtures/small/zarr/tensor_5d/i64/: zarr.json
fixtures/small/zarr/tensor_5d/i64/c/0/0/0/0/: 0
include/: tetration.h
scripts/: clip-featx.sh  fs-device-info.sh
src/: README.md  layout.rs  lib.rs  query.rs
src/catalog/: README.md  append.rs  dataset.rs  execution.rs  file_layout.rs  history.rs  index.rs  metadata.rs  mod.rs  session.rs  stream_write.rs  tile.rs  write.rs
src/convert/: README.md  cf.rs  hdf5.rs  hdf5_shared.rs  import_metadata.rs  mod.rs  netcdf.rs  parallel.rs  shared.rs  sniff.rs  tile_io.rs  zarr.rs
src/export/: README.md  mod.rs  zarr.rs
src/ffi/: README.md  error.rs  mod.rs
src/query/: README.md  cli_history.rs  device.rs  dispatch.rs  document.rs  document_toml.rs  document_wire.rs  embed_materialize.rs  execute.rs  mod.rs  plan.rs  resolve_axes.rs  resolve_selection.rs  types.rs
src/query/cli/: README.md  history.rs  info.rs  mod.rs  text.rs
src/query/cli/output/: format_num.rs  hints.rs  mod.rs  plan.rs  quiet.rs  stats.rs  table.rs
src/query/decode/: README.md  chunk_decode.rs  dense_visit.rs  indexing.rs  mod.rs
src/query/engine/: README.md  budget.rs  chunk_decode.rs  dispatch.rs  fold.rs  indexing.rs  materialize.rs  materialize_int.rs  materialize_stats.rs  mod.rs  operations.rs  parallel.rs  partial_fold.rs  partial_geometry.rs  read_plan.rs  reduction.rs  run.rs  selection.rs  spill_policy.rs
src/query/fold/: README.md  fold_policy.rs  linear_scan.rs  mod.rs  parallel_fold.rs  partial_fold.rs  partial_geometry.rs  reduction.rs  shared.rs  variance_simd.rs
src/query/fold/parallel/: mod.rs  (+5 more)
src/query/gpu/: README.md  cuda.rs  metal.rs  mod.rs  multi.rs  rocm.rs  scalar_fold.rs  streaming_fold.rs
src/query/materialize/: README.md  covariance.rs  f16.rs  f32.rs  f64.rs  int.rs  logical.rs  mod.rs  parallel.rs  selection.rs  shared.rs  stats.rs  types.rs  validate.rs
src/query/plan/: README.md  mod.rs  read_plan.rs  selection.rs
src/query/transform/: README.md  apply.rs  mod.rs  sidecar.rs  stats.rs  target.rs  warnings.rs
src/query/types/: README.md  document.rs  error.rs  mod.rs  plan.rs  response.rs  transform_method.rs
src/repair/: README.md  actions.rs  format.rs  mod.rs  plan.rs
src/tests/: README.md  catalog.rs  cli_history.rs  cli_info.rs  cli_output.rs  concurrent_query.rs  convert.rs  covariance.rs  device.rs  embed_materialize.rs  export.rs  ffi.rs  fixture.rs  fold.rs  fs_device.rs  layout_roundtrip.rs  metadata.rs  mod.rs  query.rs  query_fixtures.rs  reduction.rs  repair.rs  resolve_axes.rs  resolve_selection.rs  session.rs  small_tet_fixtures.rs  utils.rs  variance_simd.rs  verify.rs  verify_fixtures.rs
src/utils/: README.md  dtype.rs  f32_le.rs  f64_le.rs  fs_device.rs  host_memory.rs  le_pod.rs  mod.rs  wire.rs
src/verify/: README.md  chunks.rs  datasets.rs  footer.rs  format.rs  mod.rs  options.rs  recommend.rs  report.rs  run.rs
tests/: catalog.rs  catalog_robustness.rs  catalog_roundtrip.rs  cli_history.rs  cli_info.rs  cli_output.rs  convert.rs  fixture.rs  layout_roundtrip.rs  query.rs  query_mmap.rs  query_roundtrip.rs  query_strided_plan.rs  utils.rs
(+16 files in other folders)
