[package]
name = "tetration"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["AHurowitz <thicclatka@users.noreply.github.com>"]
description = "Tetration tensor file format: Rust library (tetration) and tet CLI"
license = "MIT or Apache-2.0"
repository = "https://github.com/thicclatka/tetration"
homepage = "https://github.com/thicclatka/tetration"
documentation = "https://docs.rs/tetration"
readme = "README.md"
keywords = ["tensor", "data", "format", "mmap"]
categories = ["encoding", "filesystem", "command-line-utilities"]
default-run = "tet"

# rustdoc on docs.rs: build with default features off (avoid native `netcdf` / etc. when gated).
[package.metadata.docs.rs]
no-default-features = true

[features]
default = ["tetration-netcdf", "tetration-hdf5"]
tetration-netcdf = ["dep:netcdf"]
tetration-hdf5 = ["dep:hdf5-metno"]

[[bin]]
name = "tet"
path = "src/bin/tet.rs"

[dependencies]
bytemuck = "1.25.0"
clap = { version = "4.5.51", features = ["derive"] }
indicatif = "0.18.3"
memmap2 = "0.9.10"
rayon = "1.12.0"
rkyv = "0.8.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
netcdf = { version = "0.12.0", optional = true }
hdf5-metno = { version = "0.12.4", optional = true }
zstd = "0.13.3"

[dev-dependencies]
anyhow = "1.0.102"
log = "0.4.29"
proptest = "1.9.0"
tempfile = "3.23.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
