[project]
name = "fixtures"
version = "0.1.0"
description = "HDF5, NetCDF, and Zarr example tensors for tetration convert / memory tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.13.0",
    "netCDF4>=1.7.2",
    "numpy>=2.2.0",
    "tqdm>=4.67.0",
    "zarr>=3.0.0",
]

[project.scripts]
tet-fixtures = "cli:main"
generate-fixtures = "cli:main_generate"
bench-large = "cli:main_bench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py", "generate", "benchmark"]
